Makefile mejorado (ignora errores al hacer rm)

--- a/Makefile/Makefile
+++ b/Makefile/Makefile
@@ -28,4 +28,4 @@ Conversion.h:
 	$(CC) $(CFLAGS) -c Conversion.h -o conversion.h
 
 clean:
-	rm TablasDeConversion ConversionTest TablasDeConversion.o ConversionTest.o Conversion.h.gch Conversion.o
+	-rm TablasDeConversion ConversionTest TablasDeConversion.o ConversionTest.o Conversion.h.gch Conversion.o
